tweaking css, trying to fix mobile alignment woes

--- a/app/assets/stylesheets/photobooth.css
+++ b/app/assets/stylesheets/photobooth.css
@@ -177,7 +177,7 @@ body.night h1 {
 #score {
   font-size: 12px;
   color: #000;
-  opacity: 0.6;
+  opacity: 0.8;
 }
 #hatcount {
   position: relative;
